# docker-config

./: .gitattributes  .gitignore  Jenkinsfile  README.md  makefile  makefile_pflotran  multiarch.Dockerfile
.github/workflows/: build_images.yml
archive/jenkins_lib_build/: Jenkinsfile
build_libs/: Makefile  README.md  common_cmake.mk  common_configure.mk
build_libs/bddcml/: CMakeLists.txt  Makefile
build_libs/mpich/: Makefile
build_libs/petsc/: Makefile
doc/: HOWTO
dockerfiles/: README.md  makefile  makefile.py
dockerfiles/base/: Dockerfile  Dockerfile-gnu  Dockerfile-intel  autoload.sh  entrypoint.sh  install-mpich.sh  ps_test
dockerfiles/base-build/: Dockerfile  Dockerfile-gnu  Dockerfile-intel
dockerfiles/base-build-gnu/: Dockerfile
dockerfiles/base-build-intel/: Dockerfile
dockerfiles/base-gnu/: Dockerfile
dockerfiles/base-intel/: Dockerfile
dockerfiles/build-base/: Dockerfile
dockerfiles/ci-X/: Dockerfile
dockerfiles/flow-dev-gnu/: Dockerfile  Dockerfile-pflotran
dockerfiles/flow-dev-intel/: Dockerfile
dockerfiles/flow-libs/: Dockerfile
dockerfiles/flow-libs-dev/: Dockerfile
dockerfiles/flow-libs-dev-dbg/: Dockerfile
dockerfiles/flow-libs-dev-rel/: Dockerfile  install_lib.sh
dockerfiles/geomop-X/: Dockerfile
dockerfiles/geomop-base-gnu/: makefile
dockerfiles/geomop-base-intel/: makefile
dockerfiles/install/: Dockerfile  README.md
dockerfiles/install-base/: Dockerfile
dockerfiles/install-gnu/: Dockerfile
dockerfiles/install-intel/: Dockerfile
dockerfiles/libs-gnu/: Dockerfile
dockerfiles/libs-intel/: Dockerfile
dockerfiles/nsis/: CMakeLists.txt  Dockerfile  makefile
dockerfiles/nsis/src/: configure
dockerfiles/nsis/src/templates/: install.bat  install.ps1  install.sh  run.sh  setup.template.sh  uninstall.bat  uninstall.ps1
mpi_test/charon_install/: mpich_install.sh  osu.sh
mpi_test/pbs/: intel_sing.sh  intel_sing_mpirun.sh  mpich.sh  mpich_sing.sh
no_docker_build/: build-flow.sh  build_flow.sh  config.cmake  install-libs.sh
package/: .gitignore  makefile
package/gnu/: makefile
package/intel/: makefile
server/: Dockerfile  README.md  docker-compose.yaml  jenkins_config.yaml  plugins.txt  setup.sh
(+42 files in other folders)
